	  with parameter passing in the MULTINIC configuration(2015-02-09).
	* net/iob/Kconfig: In IOB Configuration, the default number of IOB
	  chains must be more than zero is UDP read-ahead is enabled (2015-02-10).
	* net/tcp/tcp_conn.c and udp/udp_conn.c: Fix several build errors/warning
	  with IPv4 + IPv6 + multiple networks are enabled (2015-02-10).
	* arch/arm/src/sam34/sam_emac.c: SAM4 Ethernet driver bow supports
	  operation using the high priority work queue so that packet processing
	  can occur outside of interrupt level processing (2015-02-10).
	* SAM4E-EK: The nsh configuration now configures the Ethernet driver
	  for execution on the HP work thread (2015-02-10).
	* arch/arm/src/lpc17xx/lpc17_ethernet.c: Add IPv6 support to the LPC17
	  Ethernet driver.  Untested... I no longer have a proper environment
	  for LPC17 debug (2015-02-10).
	* include/netinet/in.h and libc/net/lib_addrconfig.c: Some extensions
	  to netinet/in.h adding some Linux compatible definitions.  From Macs N
	  (2015-02-11).
	* arch/arm/src/kl:  Add architectural support for the K26Z128VLH4 chip.
	  From Derek B. Noonburg (2015-02-11).
	* configs/freedom-kl26z: Add board support for the Freedom KL26Z board.
	  From Derek B. Noonburg (2015-02-11).

7.9 2015-xx-xx Gregory Nutt <gnutt@nuttx.org>

	* arch/arm/src/tiva:  Add support for the TM4C1294.  Contributed by
	  Frank Sautter (2015-02-11).
	* configs/tm4c1294-launchpad:  Add support for the TM4C1294 Launchpad.
	  Contributed by Frank Sautter (2015-02-11).
	* gettimeofday():  Move gettimeofdady() from sched/clock to libc/time.
	  Remove gettimeofday() from NuttX system calls.  It is only a wrapper
	  around clock_settime() and does not need a trap.  gettimeofday() is
	  no longer treated as a core OS interface (2015-02-12).
	* settimeofday(): gettimeofday has been decrecated in POSIX 2008.
	  settimeofday() was never part of POSIX, but I decided to add it to
	  libc as well just for symmetry (2015-02-12).