@@ -1,7 +1,7 @@
 ############################################################################
 # drivers/sensors/Make.defs
 #
-#   Copyright (C) 2011-2012 Gregory Nutt. All rights reserved.
+#   Copyright (C) 2011-2012, 2015 Gregory Nutt. All rights reserved.
 #   Author: Gregory Nutt <gnutt@nuttx.org>
 #
 # Redistribution and use in source and binary forms, with or without
@@ -63,6 +63,10 @@ endif # CONFIG_I2C
 ifeq ($(CONFIG_SPI),y)
 ifeq ($(CONFIG_ADXL345_SPI),y)
   CSRCS += adxl345_spi.c
+endif
+
+ifeq ($(CONFIG_MPL115A),y)
+  CSRCS += mpl115a.c
 endif
 endif # CONFIG_SPI
 
